# Cyaegha-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  methods.py  version.py
.github/: CODEOWNERS
.github/actions/godot-cmake-build/: action.yml
.github/workflows/: cmake_windows_builds.yml  runner.yml
cmake/: CyaeghaSCons.cmake  GodotBootstrap.cmake  GodotBuild.cmake  GodotCommon.cmake  GodotPlatformWindows.cmake
cmake/scripts/: godot_bootstrap.py  godot_codegen.py  scsub_parser.py
core/config/: project_settings.cpp  project_settings.h
drivers/accesskit/: accessibility_server_accesskit.cpp
editor/: editor_node.cpp
editor/animation/: animation_library_editor.cpp
editor/docks/: editor_dock_manager.cpp
editor/export/: export_template_manager.cpp  project_export.cpp
editor/file_system/: editor_file_system.cpp
editor/gui/: credits_roll.cpp  editor_about.cpp  editor_version_button.cpp
editor/project_manager/: project_dialog.cpp  project_list.cpp  project_manager.cpp
editor/run/: editor_run_bar.cpp  game_view_plugin.cpp
editor/script/: script_editor_plugin.cpp
editor/settings/: editor_build_profile.cpp  editor_feature_profile.cpp  project_settings_editor.cpp
editor/shader/: text_shader_editor.cpp
main/: main.cpp
modules/cjava/: README.md  SCsub  cjava_bytecode.cpp  cjava_bytecode.h  cjava_compiler.cpp  cjava_compiler.h  cjava_handle.cpp  cjava_handle.h  cjava_parser.cpp  cjava_parser.h  cjava_resource_format.cpp  cjava_resource_format.h  cjava_runtime.cpp  cjava_runtime.h  cjava_script.cpp  cjava_script.h  cjava_types.cpp  cjava_types.h  config.py  register_types.cpp  register_types.h
modules/cjava/doc_classes/: CJavaScript.xml
modules/mono/: godotsharp_dirs.cpp
modules/mono/mono_gd/: gd_mono.cpp
modules/openxr/: openxr_api.cpp
modules/visual_shader/editor/: visual_shader_editor_plugin.cpp
platform/android/java/lib/src/main/res/values/: strings.xml
platform/linuxbsd/: freedesktop_screensaver.cpp
platform/web/export/: export_plugin.cpp
platform/windows/: godot_res.rc  godot_res_wrap.rc
